CB-002 add fonts, create header and hero blocks

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,84 @@
     <meta charset="UTF-8">
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
-<body>
+<body class="white_theme">
+<div id="header" class="header">
+    <div class="container">
+        <div class="header_content">
+            <div class="header_logo">
+                <img src="./assets/images/logo.svg" alt="logo">
+            </div>
+            <div class="header_actions">
+                <div class="header_menu">
+                    <div class="header_menu_item">Use cases</div>
+                    <div class="header_menu_item">Features</div>
+                    <div class="header_menu_item">How to start</div>
+                </div>
+                <div class="header_buttons">
+                    <button id="theme_toggle" class="theme_toggle">
+                        <img src="./assets/images/sun.svg" alt="sun" />
+                    </button>
+                    <button class="button blue secondary">Get Started</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="hero" class="container">
+    <div class="hero offset_top20 flex">
+        <div class="hero_content">
+            <div class="hero_about mb_56">
+                <h1 class="title">
+                    Crypto payments for
+                    <span class="backlight">telegram bots</span>
+                </h1>
+                <p class="text mb_32">
+                    Seamlessly accept crypto payments in your Telegram bots and services.
+                </p>
+                <button class="button blue">
+                    Get started
+                </button>
+            </div>
+            <div class="hero_bots">
+                <div class="hero_avatars mb_20 flex">
+                    <div class="hero_avatar flex center">
+                        <div class="hero_avatar_img">
+                            <img src="./assets/images/ava_duck.svg" alt="duck">
+                        </div>
+                    </div>
+                    <div class="hero_avatar flex center">
+                        <div class="hero_avatar_img">
+                            <img src="./assets/images/ava_alian.svg" alt="duck">
+                        </div>
+                    </div>
+                    <div class="hero_avatar flex center">
+                        <div class="hero_avatar_img">
+                            <img src="./assets/images/ava_star.svg" alt="duck">
+                        </div>
+                    </div>
+                    <div class="hero_avatar flex center">
+                        <div class="hero_avatar_img">
+                            <img src="./assets/images/ava_alpaca.svg" alt="duck">
+                        </div>
+                    </div>
+                    <div class="hero_avatar flex center">
+                        <div class="hero_avatar_img">
+                            <img src="./assets/images/ava_dog.svg" alt="duck">
+                        </div>
+                    </div>
+                </div>
+                <p class="text">
+                    Popular bots use Crypto Pay
+                </p>
+            </div>
+        </div>
+        <div class="hero_phone">
+            <div class="hero_phone__wrap">
+                <img class="hero_phone__image" src="./assets/images/phone.png" alt="phone crypto bot">
+            </div>
+        </div>
+    </div>
+</div>
     <div id="root"></div>
 </body>
 </html>
