--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>CryptoBot</title>
 </head>
 <body class="white_theme">
     <div id="header" class="header">
@@ -27,7 +27,7 @@
             </div>
         </div>
     </div>
-    <div id="hero" class="container">
+    <div id="hero" class="container offsets_bottom">
     <div class="hero">
         <div class="hero_content">
             <div class="hero_about mb_56">
@@ -76,17 +76,148 @@
             </div>
         </div>
         <div class="hero_phone">
-            <div class="hero_phone__wrap">
-                <img class="hero_phone__image" src="./assets/images/phone.png" alt="phone crypto bot">
-            </div>
+            <img src="./assets/images/img_phone.png" alt="phone crypto bot">
+
+<!--            <div class="hero_phone__wrap">-->
+<!--                <img class="hero_phone__image" src="./assets/images/phone.png" alt="phone crypto bot">-->
+<!--            </div>-->
         </div>
     </div>
 </div>
-    <div id="user_case" class="segment">
-        <div class="container">
-            <div class="user-cases">
-                <div class="user-case">
-
+    <div id="user_case" class="segment offsets_bottom">
+        <div class="user-cases">
+            <div class="container slider">
+                <div class="slider_list">
+                    <div class="user-case slide">
+                        <div class="user-case_square">
+                            <div class="user-case_messages pink">
+                                <div class="user-case_messages__wrap">
+                                    <div class="message">
+                                        <img class="icon" src="./assets/images/money.svg" alt="money">
+                                        You sent 5,5 USDT ($5.50).
+                                        <br/><br/>
+                                        <span class="bold" >Recipient:</span> GoodsBot
+                                        <br/><br/>
+                                        <img class="icon" src="./assets/images/receipt.svg" alt="receipt">
+                                        1 month of Blazing Fast VPN
+                                        <img class="icon" src="./assets/images/flash.svg" alt="flash">
+                                        <div class="message_time">
+                                            21:25
+                                        </div>
+                                    </div>
+                                    <div class="message last_triangle">
+                                        <img class="icon" src="./assets/images/key.svg" alt="key">
+                                        Access key: VPN-X3Y7-Z1W9-R6T2-Q4V8
+                                        <div class="message_time">
+                                            21:25
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="user-case_description">
+                            <h2 class="title white">
+                            <span class="backlight">
+                                Instant<br/>Auto Sales:
+                            </span>
+                                <br/>
+                                Boost conversion
+                            </h2>
+                            <p class="text white user-case_about">
+                                Immediately deliver digital products and services to your users.
+                            </p>
+                            <button class="button blue">Open API Docs</button>
+                        </div>
+                    </div>
+                    <div class="user-case slide">
+                        <div class="user-case_square">
+                            <div class="user-case_messages yellow">
+                                <div class="user-case_messages__wrap">
+                                    <div class="message first">
+                                        <img class="icon" src="./assets/images/money.svg" alt="money">
+                                        You sent 3,5 TON ($5.08).
+                                        <br/><br/>
+                                        <span class="bold" >Recipient:</span> Exclusive access to the channel
+                                        <br/><br/>
+                                        <img class="icon" src="./assets/images/receipt.svg" alt="receipt">
+                                        Exclusive access to the channel
+                                        <img class="icon" src="./assets/images/cat.svg" alt="cat">
+                                        <div class="message_time">
+                                            21:30
+                                        </div>
+                                    </div>
+                                    <div class="message link last">
+                                    <div class="link_arrow"></div>
+                                    View Channel
+                                </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="user-case_description">
+                            <h2 class="title white">
+                            <span class="backlight">
+                                Channels<br/>integration:
+                            </span>
+                                <br/>
+                                Seamless access
+                            </h2>
+                            <p class="text white user-case_about">
+                                Automatically unlock exclusive content to your users.
+                            </p>
+                            <button class="button blue">Open API Docs</button>
+                        </div>
+                    </div>
+                    <div class="user-case slide">
+                        <div class="user-case_square">
+                            <div class="user-case_messages blue">
+                                <div class="user-case_messages__wrap codes">
+                                    <div class="message big first">
+                                        <img class="icon" src="./assets/images/money.svg" alt="money">
+                                        You sent 3,99 USDT ($3.99).
+                                        <br/><br/>
+                                        <span class="bold" >Recipient:</span> <span class="name">@StoresBot</span>
+                                        <br/><br/>
+                                        <img class="icon" src="./assets/images/receipt.svg" alt="receipt">
+                                        One month of Premium access
+                                        <img class="icon" src="./assets/images/star.svg" alt="star">
+                                        <div class="message_time">
+                                            22:10
+                                        </div>
+                                        <div class="pointer">
+                                            <svg fill="none" class="arrow">
+                                                <ellipse cx="22.9516" cy="13.4892" rx="2.74116" ry="2.74116" fill="white"/>
+                                                <ellipse cx="22.9516" cy="22.104" rx="2.74116" ry="2.74116" fill="white"/>
+                                                <path d="M24.3415 35.8337C23.6849 36.8464 22.2049 36.8464 21.5483 35.8337L18.1257 30.5551C17.4061 29.4453 18.2012 27.9782 19.5223 27.9782L26.3675 27.9782C27.6886 27.9782 28.4838 29.4453 27.7642 30.5551L24.3415 35.8337Z" fill="white"/>
+                                            </svg>
+                                        </div>
+                                    </div>
+                                    <div class="message last code_place">
+                                        <pre class="code"><span class="key">Invoice</span>(<br/>    <span class="key">payload:</span> “item:monthly_premium”,<br/>    <span class="key">status:</span> “paid”,<br/>    <span class="key">amount:</span> “3.99”,<br/>    <span class="key">asset:</span> “USDT”,<br/>)</pre>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="user-case_description">
+                            <h2 class="title white">
+                            <span class="backlight">
+                                Endless<br/>customization:
+                            </span>
+                                <br/>
+                                with Webhooks
+                            </h2>
+                            <p class="text white user-case_about">
+                                Receive successful payment notifications in real-time. Integrate to any scenario of your service.
+                            </p>
+                            <button class="button blue">Open API Docs</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="slider_dots">
+                    <div class="slide_number">01</div>
+                    <div class="slide_dots">
+                        <div class="slide_dot active"></div>
+                    </div>
+                    <div class="slide_count">01</div>
                 </div>
             </div>
         </div>
