CB-002 fix phone image

--- a/src/index.html
+++ b/src/index.html
@@ -76,11 +76,9 @@
             </div>
         </div>
         <div class="hero_phone">
-            <img src="./assets/images/img_phone.png" alt="phone crypto bot">
-
-<!--            <div class="hero_phone__wrap">-->
-<!--                <img class="hero_phone__image" src="./assets/images/phone.png" alt="phone crypto bot">-->
-<!--            </div>-->
+            <div class="hero_phone-wrap">
+                <img src="./assets/images/phone.png" alt="phone crypto bot">
+            </div>
         </div>
     </div>
 </div>
