CB-005 add footer

--- a/src/index.html
+++ b/src/index.html
@@ -5,23 +5,25 @@
     <title>CryptoBot</title>
 </head>
 <body class="white_theme">
-    <div id="header" class="header">
-        <div class="container">
-            <div class="header_content">
-                <div class="header_logo">
-                    <img src="./assets/images/logo.svg" alt="logo">
-                </div>
-                <div class="header_actions">
-                    <div class="header_menu">
-                        <div class="header_menu_item">Use cases</div>
-                        <div class="header_menu_item">Features</div>
-                        <div class="header_menu_item">How to start</div>
+    <div id="header" class="segment white">
+        <div class="header">
+            <div class="container">
+                <div class="header_content">
+                    <div class="header_logo">
+                        <img src="./assets/images/logo.svg" alt="logo">
                     </div>
-                    <div class="header_buttons">
-                        <button id="theme_toggle" class="theme_toggle">
-                            <img src="./assets/images/sun.svg" alt="sun" />
-                        </button>
-                        <button class="button blue secondary">Get Started</button>
+                    <div class="header_actions">
+                        <div class="header_menu">
+                            <div class="header_menu_item">Use cases</div>
+                            <div class="header_menu_item">Features</div>
+                            <div class="header_menu_item">How to start</div>
+                        </div>
+                        <div class="header_buttons">
+                            <button id="theme_toggle" class="theme_toggle">
+                                <img src="./assets/images/sun.svg" alt="sun" />
+                            </button>
+                            <button class="button blue secondary">Get Started</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -808,6 +810,23 @@
             </div>
         </div>
     </div>
-    <div id="root"></div>
+    <div id="footer" class="segment">
+        <div class="container">
+            <div class="footer_content">
+                <div class="footer_logo">
+                    <img src="./assets/images/logo.svg" alt="logo">
+                </div>
+                <div class="footer_menu">
+                    <div class="footer_menu__item">Use cases</div>
+                    <div class="footer_menu__item">Features</div>
+                    <div class="footer_menu__item">How to start</div>
+                </div>
+                <button class="button white">Get Started</button>
+            </div>
+            <p class="text white">
+                &#169; 2023 Crypto Bot
+            </p>
+        </div>
+    </div>
 </body>
 </html>
