CB-006 update header and footer

--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
                         <img src="./assets/images/logo.svg" alt="logo">
                     </div>
                     <div class="header_actions">
-                        <div class="header_menu">
-                            <div class="header_menu_item">Use cases</div>
-                            <div class="header_menu_item">Features</div>
-                            <div class="header_menu_item">How to start</div>
+                        <div class="header_menu flex_center">
+                            <a href="#user_case" class="header_menu_item">Use cases</a>
+                            <a href="#feature" class="header_menu_item">Features</a>
+                            <a href="#quick_start" class="header_menu_item">How to start</a>
                         </div>
                         <div class="header_buttons">
                             <button id="theme_toggle" class="theme_toggle">
@@ -320,7 +320,7 @@
                     <div class="features_vertical flex_width_40">
                         <div class="feature">
                             <div class="feature_one-click">
-                                <div class="feature_one-click__animations">
+                                <div class="feature_one-click__animation">
                                     <button class="feature_one-click__button">
                                         &#127965; Create App
                                     </button>
@@ -815,14 +815,14 @@
     <div id="footer" class="segment">
         <div class="container">
             <div class="footer">
-                <div class="footer_content">
+                <div class="footer_content mb_24">
                     <div class="footer_logo">
                         <img src="./assets/images/logo.svg" alt="logo">
                     </div>
-                    <div class="footer_menu">
-                        <div class="footer_menu__item">Use cases</div>
-                        <div class="footer_menu__item">Features</div>
-                        <div class="footer_menu__item">How to start</div>
+                    <div class="footer_menu flex_center">
+                        <a href="#user_case" class="footer_menu__item">Use cases</a>
+                        <a href="#feature" class="footer_menu__item">Features</a>
+                        <a href="#quick_start" class="footer_menu__item">How to start</a>
                     </div>
                     <button class="button white">Get Started</button>
                 </div>
