CB-006 update last styles, add style file in webpack

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CryptoBot</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body class="white_theme">
     <div id="header" class="segment white">
@@ -98,7 +99,7 @@
                                 <div class="message">
                                     &#128184; You sent 5,5 USDT ($5.50).
                                     <br/><br/>
-                                    <span class="bold" >Recipient:</span> GoodsBot
+                                    <span class="bold_text">Recipient:</span> GoodsBot
                                     <br/><br/>
                                     &#129534; 1 month of Blazing Fast VPN &#9889;
                                     <div class="message_time">
@@ -135,14 +136,14 @@
                                 <div class="message first">
                                     &#128184; You sent 3,5 TON ($5.08).
                                     <br/><br/>
-                                    <span class="bold" >Recipient:</span> Exclusive access to the channel
+                                    <span class="bold_text">Recipient:</span> Exclusive access to the channel
                                     <br/><br/>
                                     &#129534; Exclusive access to the channel &#128571;
                                     <div class="message_time">
                                         21:30
                                     </div>
                                 </div>
-                                <div class="message link last">
+                                <div class="message link flex_center last">
                                     <div class="link_arrow"></div>
                                     View Channel
                                 </div>
@@ -172,8 +173,8 @@
                                 <div class="message big first">
                                     &#128184; You sent 3,99 USDT ($3.99).
                                     <br/><br/>
-                                    <span class="bold" >Recipient:</span>
-                                    <span class="medium name">@StoresBot</span>
+                                    <span class="bold_text">Recipient:</span>
+                                    <span class="medium_text name">@StoresBot</span>
                                     <br/><br/>
                                     &#129534; One month of Premium access &#127775;
                                     <div class="message_time">
@@ -187,7 +188,7 @@
                                         </svg>
                                     </div>
                                 </div>
-                                <div class="message last code_place">
+                                <div class="message last codes">
                                     <pre class="code"><span class="blue_code">Invoice</span>(<br/>    <span class="blue_code">payload:</span> “item:monthly_premium”,<br/>    <span class="blue_code">status:</span> “paid”,<br/>    <span class="blue_code">amount:</span> “3.99”,<br/>    <span class="blue_code">asset:</span> “USDT”,<br/>)</pre>
                                 </div>
                             </div>
@@ -227,7 +228,7 @@
                         </h3>
                         <p class="text">
                             Bill any supported cryptocurrencies with
-                            <span class="bold_text">asset</span>
+                            <span class="medium_text">asset</span>
                             parameter in
                             <a href="#" class="link">GetInvoice</a>
                             method
@@ -415,28 +416,28 @@
                     <div class="feature flex_width_60">
                         <div class="telegram_chat" style="background-image: url('assets/images/tg_background.jpg')">
                             <div class="message first">
-                                Application Statistics <span class="semi_bold">@GoodsBot</span> for <span class="semi_bold">all time:</span><br/>
+                                Application Statistics <span class="semi_bold_text">@GoodsBot</span> for <span class="semi_bold_text">all time:</span><br/>
                                 <br/>
-                                Volume: <span class="semi_bold">$6,530</span><br/>
+                                Volume: <span class="semi_bold_text">$6,530</span><br/>
                                 <br/>
-                                The number of created invoices: <span class="semi_bold">15,569</span><br/>
-                                Number of payments: <span class="semi_bold">6,453</span><br/>
-                                Number of users: <span class="semi_bold">5,606</span><br/>
+                                The number of created invoices: <span class="semi_bold_text">15,569</span><br/>
+                                Number of payments: <span class="semi_bold_text">6,453</span><br/>
+                                Number of users: <span class="semi_bold_text">5,606</span><br/>
                                 <br/>
-                                Conversion: <span class="semi_bold">41%</span>
+                                Conversion: <span class="semi_bold_text">41%</span>
                                 <div class="message_time">21:30</div>
                             </div>
                             <div class="feature_small_messages">
-                                <div class="message button center active"><span class="allocate">All Time</span></div>
-                                <div class="message button center"><span class="allocate">Today</span></div>
+                                <div class="message button center active"><span class="allocate flex_center">All Time</span></div>
+                                <div class="message button center"><span class="allocate flex_center">Today</span></div>
                             </div>
                             <div class="feature_small_messages">
-                                <div class="message button center"><span class="allocate">Yesterday</span></div>
-                                <div class="message button center"><span class="allocate">Week</span></div>
+                                <div class="message button center"><span class="allocate flex_center">Yesterday</span></div>
+                                <div class="message button center"><span class="allocate flex_center">Week</span></div>
                             </div>
-                            <div class="message button center"><span class="allocate">Month</span></div>
+                            <div class="message button center"><span class="allocate flex_center">Month</span></div>
                             <div class="message button last">
-                            <span class="back_arrow">
+                            <span class="back_arrow flex_center">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="7" height="11" viewBox="0 0 7 11" fill="none">
                                     <path d="M5.18324 1.63171L1.42725 5.38771L5.18324 9.1437" stroke="white" stroke-width="2.81699" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>
@@ -462,7 +463,7 @@
                                         <div class="message preview">
                                             <div class="sender">
                                                 <div class="sender_wrapper">
-                                                    <div class="avatar">
+                                                    <div class="avatar full_size">
                                                         <img src="assets/images/logo.svg" alt="ava">
                                                     </div>
                                                     <svg class="messenger" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -478,7 +479,7 @@
                                                 </div>
                                             </div>
                                             <div class="content">
-                                                <span class="semi_bold">Crypto Bot</span><br/>
+                                                <span class="semi_bold_text">Crypto Bot</span><br/>
                                                 &#128184; You received 3448 TON ($5000)
                                                 from @CryptoBot #A777<br/><br/>
                                                 &#128172; Design contest awards &#129351;
@@ -490,7 +491,7 @@
                                         <div class="message preview hide">
                                             <div class="sender">
                                                 <div class="sender_wrapper">
-                                                    <div class="avatar">
+                                                    <div class="avatar full_size">
                                                         <img src="assets/images/logo.svg" alt="ava">
                                                     </div>
                                                     <svg class="messenger" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -506,7 +507,7 @@
                                                 </div>
                                             </div>
                                             <div class="content">
-                                                <span class="semi_bold">Crypto Bot</span><br/>
+                                                <span class="semi_bold_text">Crypto Bot</span><br/>
                                                 &#128184; You received 8478 TON ($10000)
                                                 from @CryptoBot #A820<br/><br/>
                                                 &#128172; Congrats! You are winner &#128588;
@@ -518,7 +519,7 @@
                                         <div class="message preview hide">
                                             <div class="sender">
                                                 <div class="sender_wrapper">
-                                                    <div class="avatar">
+                                                    <div class="avatar full_size">
                                                         <img src="assets/images/logo.svg" alt="ava">
                                                     </div>
                                                     <svg class="messenger" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -534,7 +535,7 @@
                                                 </div>
                                             </div>
                                             <div class="content">
-                                                <span class="semi_bold">Crypto Bot</span><br/>
+                                                <span class="semi_bold_text">Crypto Bot</span><br/>
                                                 &#128184; You received 2300 TON ($1000)
                                                 from @CryptoBot #A820<br/><br/>
                                                 &#128172; We appreciate your interest &#128640;
@@ -560,22 +561,22 @@
                         <div class="feature_payment">
                             <div class="feature_payment__animation flex_center">
                                 <div class="message last_triangle">
-                                    &#127965; <span class="medium">Anonymous</span> paid your invoice #IV53.<br/>
-                                    You received <span class="medium">3442 TON ($5000).</span><br/>
+                                    &#127965; <span class="medium_text">Anonymous</span> paid your invoice #IV53.<br/>
+                                    You received <span class="medium_text">3442 TON ($5000).</span><br/>
                                     <br/>
                                     &#128172; A generous donation! Keep working hard  &#128170;
                                     <div class="message_time">21:25</div>
                                 </div>
                                 <div class="message last_triangle hide">
-                                    &#127965; <span class="medium">Anonymous</span> paid your invoice #IV80.<br/>
-                                    You received <span class="medium">3823 TON ($6500).</span><br/>
+                                    &#127965; <span class="medium_text">Anonymous</span> paid your invoice #IV80.<br/>
+                                    You received <span class="medium_text">3823 TON ($6500).</span><br/>
                                     <br/>
                                     &#128172; A bountiful gift! Keep reaching for the stars! &#128588;
                                     <div class="message_time">21:25</div>
                                 </div>
                                 <div class="message last_triangle hide">
-                                    &#127965; <span class="medium">Anonymous</span> paid your invoice #IV80.<br/>
-                                    You received <span class="medium">1176 TON ($2000).</span><br/>
+                                    &#127965; <span class="medium_text">Anonymous</span> paid your invoice #IV80.<br/>
+                                    You received <span class="medium_text">1176 TON ($2000).</span><br/>
                                     <br/>
                                     &#128172;  A substantial gift! Keep striving for excellence! &#127881;
                                     <div class="message_time">21:25</div>
@@ -586,7 +587,7 @@
                                     Anonymous payments
                                 </h3>
                                 <p class="text">
-                                    Use <span class="bold">allow_anonymous</span> parameter
+                                    Use <span class="medium_text">allow_anonymous</span> parameter
                                     in <a href="#" class="link">createInvoice</a> method to give user
                                     an option to remain private
                                 </p>
@@ -630,12 +631,12 @@
                         <div class="quick-start_step__example">
                             <div class="quick-start_step__content full_size flex_center background_purple_grad">
                                 <div class="message first">
-                                    Here is the token for the app <span class="semi_bold">@GoodsBot</span><br/><br/>
+                                    Here is the token for the app <span class="semi_bold_text">@GoodsBot</span><br/><br/>
                                     114935:AA9xMcRqHYZYl6CQlkhBStMAwTFQ1s6iJHM<br/><br/>
                                     &#9888; This token can be used by anyone to control your app. Keep and store it safely.<br/><br/>
                                     <div class="message_time">21:30</div>
                                 </div>
-                                <div class="message link last">
+                                <div class="message link flex_center last">
                                     Revoke Token
                                 </div>
                             </div>
@@ -646,7 +647,7 @@
                     <div class="flex_width_60">
                         <div class="quick-start_step__example">
                             <div class="quick-start_step__content full_size flex_center background_yellow_grad">
-                                <div class="message code_place">
+                                <div class="message codes">
                                     <pre class="code">asset<span class="blue_code">=</span><span class="yellow_code">TON</span><span class="red_code">&</span>amount<span class="blue_code">=</span><span class="yellow_code">2.75</span><br/>{"asset":<span class="blue_code">"TON"</span>, "amount": <span class="blue_code">"2.75"</span>}</pre>
                                 </div>
                             </div>
@@ -703,7 +704,7 @@
                     <div class="flex_width_60">
                         <div class="quick-start_step__example">
                             <div class="quick-start_step__content flex_center full_size background_blue_grad">
-                                <div class="message code_place">
+                                <div class="message codes">
                                     <pre class="code"><span class="blue_code">Invoice</span>(<br/>    <span class="blue_code">payload:</span> “item:monthly_premium”,<br/>    <span class="blue_code">status:</span> “paid”,<br/>    <span class="blue_code">amount:</span> “3.99”,<br/>    <span class="blue_code">asset:</span> “USDT”,<br/>)</pre>
                                 </div>
                             </div>
@@ -753,7 +754,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p class="text bold">
+                        <p class="text medium_text">
                             crypto-pay-api
                         </p>
                     </div>
@@ -765,7 +766,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p class="text bold">
+                        <p class="text medium_text">
                             CryptoPay
                         </p>
                     </div>
@@ -777,7 +778,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p class="text bold">
+                        <p class="text medium_text">
                             crypto-pay-api
                         </p>
                     </div>
@@ -789,7 +790,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p class="text bold">
+                        <p class="text medium_text">
                             aiocryptopay
                         </p>
                     </div>
@@ -801,7 +802,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p class="text bold">
+                        <p class="text medium_text">
                             cryptobot-sdk-golang
                         </p>
                     </div>
